--- a/publications.bib
+++ b/publications.bib
@@ -23,3 +23,12 @@
     year={2023},
     url={https://openreview.net/forum?id=TrwE8l9aJzs}
 }
+
+@misc{ren2023feedback,
+      title={Feedback RoI Features Improve Aerial Object Detection}, 
+      author={Botao Ren and Botian Xu and Tengyu Liu and Jingyi Wang and Zhidong Deng},
+      year={2023},
+      eprint={2311.17129},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
